tests/type-errors/02-unbound-var.flt
// Unbound variable error
// --- Command: dotnet run --project FunLang -- --emit-type --expr "x + 1" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0303]: Unbound variable: x
 --> <expr>:1:0-1
   = hint: Make sure the variable is defined before use
